--- a/deliveryfrontend/src/index.html
+++ b/deliveryfrontend/src/index.html
@@ -6,10 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">    
+  
   
 </head>
 <body>
-  <app-root></app-root>  
+  <app-root ></app-root>  
 </body>
 </html>
